# chess-server

chessboard/: README.md  angular.json  karma.conf.js  package-lock.json  package.json
chessboard/src/: index.html
chessboard/src/app/: api.service.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts
chessboard/src/app/control-panel/: control-panel.component.css  control-panel.component.html  control-panel.component.ts
chessboard/src/app/toolbar/: toolbar.component.css  toolbar.component.html
chessboard/src/environments/: environment.ts
fastapi/: .gitignore  README.md  main.py  pyproject.toml  serviceParams.json
fastapi/src/: service.py
fastapi/src/alpha/: alphaService.py  gameEnv.py  models.py
fastapi/src/game/: gameEnv.py
fastapi/src/lstm/: lstmService.py  seqModules.py  service.py  vocab_src.json  vocab_tar.json
fastapi/src/miniMax/: miniMaxService.py  models.py
fastapi/src/mlp/: mlpService.py  models.py
fastapi/src/monteCarlo/: models.py  monteCarloService.py
fastapi/src/stockfish/: stockfishService.py
fastapi/src/tests/: test_gameEnv.py
