[project]
name = "chess-api"
version = "0.1.0"
description = ""
authors = [
    {name = "piotras",email = "piotr.kow.59@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "chess (>=1.11.1,<2.0.0)",
    "torch (>=2.5.1,<3.0.0)",
    "fastapi (>=0.115.6,<0.116.0)",
    "uvicorn (>=0.34.0,<0.35.0)",
    "pytest (>=8.3.4,<9.0.0)",
    "numpy (>=2.2.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
